updated html removed assets folder

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <!-- Favicons -->
 
-    <link href="assets/img/favicon-min.jpg" rel="icon" />
-    <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" /> -->
+    <link href="img/favicon-min.jpg" rel="icon" />
+    <!-- <link href="img/apple-touch-icon.png" rel="apple-touch-icon" /> -->
 
     <!-- Google Fonts -->
     <link
@@ -27,25 +27,25 @@
     />
 
     <!-- Vendor CSS Files -->
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link href="vendor/aos/aos.css" rel="stylesheet" />
     <link
-      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      href="vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link
-      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      href="vendor/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+    <link href="vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
     <link
-      href="assets/vendor/glightbox/css/glightbox.min.css"
+      href="vendor/glightbox/css/glightbox.min.css"
       rel="stylesheet"
     />
-    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <link href="vendor/remixicon/remixicon.css" rel="stylesheet" />
+    <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
 
     <!-- =======================================================
   * Template Name: Gp - v4.8.1
@@ -63,13 +63,13 @@
       >
         <!-- <h1 class="logo me-auto me-lg-0">
           <a href="index.html"
-            ><img src="/assets/logos-lulu/logo-gold-black.png"
+            ><img src="/logos-lulu/logo-gold-black.png"
           /></a>
         </h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
         <a href="index.html" class="logo me-auto me-lg-0"
           ><img
-            src="/assets/logos-lulu/logo-gold-black.jpg"
+            src="/logos-lulu/logo-gold-black.jpg"
             alt=""
             class="img-fluid"
         /></a>
@@ -234,7 +234,7 @@
               data-aos-delay="100"
             >
               <img
-                src="assets/images-lulu/img02.jpg"
+                src="images-lulu/img02.jpg"
                 class="img-fluid dress-main"
                 alt=""
               />
@@ -282,7 +282,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="member-img">
                   <img
-                    src="assets/images-lulu/img01.jpg"
+                    src="images-lulu/img01.jpg"
                     class="img-fluid"
                     alt=""
                   />
@@ -298,7 +298,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="300">
                 <div class="member-img small">
                   <img
-                    src="assets/images-lulu/img9.jpg"
+                    src="images-lulu/img9.jpg"
                     class="img-fluid"
                     alt=""
                   />
@@ -316,7 +316,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="300">
                 <div class="member-img">
                   <img
-                    src="assets/images-lulu/img03.jpg"
+                    src="images-lulu/img03.jpg"
                     class="img-fluid"
                     alt=""
                   />
@@ -332,7 +332,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="400">
                 <div class="member-img">
                   <img
-                    src="assets/images-lulu/img04.jpg"
+                    src="images-lulu/img04.jpg"
                     class="img-fluid"
                     alt=""
                   />
@@ -349,7 +349,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="member-img small">
                   <img
-                    src="assets/images-lulu/img8.jpg"
+                    src="images-lulu/img8.jpg"
                     class="img-fluid"
                     alt=""
                   />
@@ -365,7 +365,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="200">
                 <div class="member-img kimono">
                   <img
-                    src="assets/images-lulu/kimono.jpg"
+                    src="images-lulu/kimono.jpg"
                     class="img-fluid"
                     alt=""
                   />
@@ -381,7 +381,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="300">
                 <div class="member-img">
                   <img
-                    src="assets/images-lulu/img05.jpg"
+                    src="images-lulu/img05.jpg"
                     class="img-fluid"
                     alt=""
                   />
@@ -397,7 +397,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="400">
                 <div class="member-img">
                   <img
-                    src="assets/images-lulu/img07.jpg"
+                    src="images-lulu/img07.jpg"
                     class="img-fluid"
                     alt=""
                   />
@@ -440,14 +440,14 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/kids-1-min.jpg"
+                  src="img/portfolio/kids-1-min.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-1.jpg"
+                      href="img/portfolio/portfolio-1.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="App 1"
@@ -464,14 +464,14 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/kids-2-min.jpg"
+                  src="img/portfolio/kids-2-min.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/headpiece-1.jpg"
+                      href="img/portfolio/headpiece-1.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="Web 3"
@@ -488,14 +488,14 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/kids-3-min.jpg"
+                  src="img/portfolio/kids-3-min.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
                   <div class="portfolio-links">
                     <a
-                      href="assets/images-lulu/img04.png"
+                      href="images-lulu/img04.png"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="App 2"
@@ -512,14 +512,14 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/headpiece-1-min.jpg"
+                  src="img/portfolio/headpiece-1-min.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
                   <div class="portfolio-links">
                     <a
-                      href="assets/images-lulu/img04.png"
+                      href="images-lulu/img04.png"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="Card 2"
@@ -536,14 +536,14 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/kids-4-min.jpg"
+                  src="img/portfolio/kids-4-min.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-5.jpg"
+                      href="img/portfolio/portfolio-5.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="Web 2"
@@ -560,14 +560,14 @@
             <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/headpiece-4-min.jpg"
+                  src="img/portfolio/headpiece-4-min.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-6.jpg"
+                      href="img/portfolio/portfolio-6.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="App 3"
@@ -584,14 +584,14 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/headpiece-2-min.jpg"
+                  src="img/portfolio/headpiece-2-min.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-7.jpg"
+                      href="img/portfolio/portfolio-7.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="Card 1"
@@ -608,14 +608,14 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/headpiece-3-min.jpg"
+                  src="img/portfolio/headpiece-3-min.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-8.jpg"
+                      href="img/portfolio/portfolio-8.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="Card 3"
@@ -632,14 +632,14 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/kids-5.jpg"
+                  src="img/portfolio/kids-5.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-9.jpg"
+                      href="img/portfolio/portfolio-9.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="Web 3"
@@ -656,14 +656,14 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/headpiece-5-min.jpg"
+                  src="img/portfolio/headpiece-5-min.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-8.jpg"
+                      href="img/portfolio/portfolio-8.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="Card 3"
@@ -774,7 +774,7 @@
               <div class="swiper-slide">
                 <div class="testimonial-item">
                   <img
-                    src="assets/img/testimonials/testimonials-1-min.jpg"
+                    src="img/testimonials/testimonials-1-min.jpg"
                     class="testimonial-img"
                     alt=""
                   />
@@ -795,7 +795,7 @@
               <div class="swiper-slide">
                 <div class="testimonial-item">
                   <img
-                    src="assets/img/testimonials/testimonials-6-min.jpg"
+                    src="img/testimonials/testimonials-6-min.jpg"
                     class="testimonial-img"
                     alt=""
                   />
@@ -816,7 +816,7 @@
               <div class="swiper-slide">
                 <div class="testimonial-item">
                   <img
-                    src="assets/img/testimonials/testimonials-3-min.jpg"
+                    src="img/testimonials/testimonials-3-min.jpg"
                     class="testimonial-img"
                     alt=""
                   />
@@ -836,7 +836,7 @@
               <div class="swiper-slide">
                 <div class="testimonial-item">
                   <img
-                    src="assets/img/testimonials/testimonials-7-min.jpg"
+                    src="img/testimonials/testimonials-7-min.jpg"
                     class="testimonial-img"
                     alt=""
                   />
@@ -857,7 +857,7 @@
               <div class="swiper-slide">
                 <div class="testimonial-item">
                   <img
-                    src="assets/img/testimonials/testimonials-2-min.jpg"
+                    src="img/testimonials/testimonials-2-min.jpg"
                     class="testimonial-img"
                     alt=""
                   />
@@ -897,7 +897,7 @@
                     <h5><i class="bx bxl-instagram"></i>hairjewel.ng</h5>
                     <img
                       class="brand-image"
-                      src="assets/img/team/jewelng.jpg"
+                      src="img/team/jewelng.jpg"
                       alt=""
                     />
                     <p>
@@ -920,7 +920,7 @@
                     <h5><i class="bx bxl-instagram"></i>imanakidsng</h5>
                     <img
                       class="brand-image"
-                      src="assets/img/team/imanakids.jpg"
+                      src="img/team/imanakids.jpg"
                       alt=""
                     />
                     <p>
@@ -940,7 +940,7 @@
                     <h5><i class="bx bxl-instagram"></i>declutterqueenz</h5>
                     <img
                       class="brand-image"
-                      src="assets/img/team/declutter.jpg"
+                      src="img/team/declutter.jpg"
                       alt=""
                     />
                     <p>
@@ -963,7 +963,7 @@
                     <h5><i class="bx bxl-instagram"></i>fingerprintbyjess</h5>
                     <img
                       class="brand-image"
-                      src="assets/img/team/fingerprint.jpg"
+                      src="img/team/fingerprint.jpg"
                       alt=""
                     />
                     <p>
@@ -1100,7 +1100,7 @@
                 <a href="index.html" class="logo me-auto me-lg-0"
                   ><img
                     id="footer-logo"
-                    src="/assets/logos-lulu/logo-gold-black.jpg"
+                    src="/logos-lulu/logo-gold-black.jpg"
                     alt=""
                     class="img-fluid"
                 /></a>
@@ -1219,15 +1219,15 @@
     ></a>
 
     <!-- Vendor JS Files -->
-    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="vendor/aos/aos.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="vendor/php-email-form/validate.js"></script>
 
     <!-- Template Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
